Añadido calculo de torques

--- a/gui.ui
+++ b/gui.ui
@@ -216,246 +216,258 @@
     <number>1</number>
    </attribute>
    <widget class="QWidget" name="dockWidgetContents">
-    <widget class="QComboBox" name="cb_posiciones">
-     <property name="geometry">
-      <rect>
-       <x>90</x>
-       <y>30</y>
-       <width>87</width>
-       <height>29</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_5">
-     <property name="geometry">
-      <rect>
-       <x>20</x>
-       <y>30</y>
-       <width>87</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Posición:</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="b_anadirPos">
-     <property name="geometry">
-      <rect>
-       <x>180</x>
-       <y>30</y>
-       <width>86</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Añadir</string>
-     </property>
-    </widget>
-    <widget class="QTabWidget" name="tabWidget">
-     <property name="enabled">
-      <bool>true</bool>
-     </property>
-     <property name="geometry">
-      <rect>
-       <x>30</x>
-       <y>120</y>
-       <width>278</width>
-       <height>346</height>
-      </rect>
-     </property>
-     <property name="currentIndex">
-      <number>0</number>
-     </property>
-     <widget class="QWidget" name="segmentos">
-      <attribute name="title">
-       <string>Segmentos</string>
-      </attribute>
-      <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="0">
-        <widget class="QPushButton" name="b_cabeza">
+    <layout class="QVBoxLayout" name="verticalLayout_3">
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_4">
+       <item>
+        <widget class="QLabel" name="label_5">
          <property name="text">
-          <string>Cabeza</string>
+          <string>Posición:</string>
          </property>
         </widget>
        </item>
-       <item row="1" column="0">
-        <widget class="QPushButton" name="b_tronco">
-         <property name="text">
-          <string>Tronco</string>
-         </property>
-        </widget>
+       <item>
+        <widget class="QComboBox" name="cb_posiciones"/>
        </item>
-       <item row="2" column="0">
-        <widget class="QPushButton" name="b_brazo">
+       <item>
+        <widget class="QPushButton" name="b_anadirPos">
          <property name="text">
-          <string>Brazo</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <widget class="QPushButton" name="b_antebrazo">
-         <property name="text">
-          <string>Antebrazo</string>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="0">
-        <widget class="QPushButton" name="b_mano">
-         <property name="text">
-          <string>Mano</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="0">
-        <widget class="QPushButton" name="b_muslo">
-         <property name="text">
-          <string>Muslo</string>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="0">
-        <widget class="QPushButton" name="b_pantorrilla">
-         <property name="text">
-          <string>Pantorrilla</string>
-         </property>
-        </widget>
-       </item>
-       <item row="7" column="0">
-        <widget class="QPushButton" name="b_pie">
-         <property name="text">
-          <string>Pie</string>
+          <string>Añadir</string>
          </property>
         </widget>
        </item>
       </layout>
-     </widget>
-     <widget class="QWidget" name="dimensiones">
-      <attribute name="title">
-       <string>Dimesiones</string>
-      </attribute>
-      <layout class="QVBoxLayout" name="verticalLayout_2">
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_3">
-         <item>
-          <widget class="QLabel" name="label_6">
+     </item>
+     <item>
+      <widget class="QTabWidget" name="tabWidget">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="currentIndex">
+        <number>0</number>
+       </property>
+       <widget class="QWidget" name="segmentos">
+        <attribute name="title">
+         <string>Segmentos</string>
+        </attribute>
+        <layout class="QGridLayout" name="gridLayout">
+         <item row="5" column="0">
+          <widget class="QPushButton" name="b_muslo">
            <property name="text">
-            <string>Sexo:</string>
+            <string>Muslo</string>
            </property>
           </widget>
          </item>
-         <item>
-          <spacer name="horizontalSpacer_5">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
+         <item row="3" column="0">
+          <widget class="QPushButton" name="b_antebrazo">
+           <property name="text">
+            <string>Antebrazo</string>
            </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
+          </widget>
          </item>
+         <item row="0" column="0">
+          <widget class="QPushButton" name="b_cabeza">
+           <property name="text">
+            <string>Cabeza</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QPushButton" name="b_tronco">
+           <property name="text">
+            <string>Tronco</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="QPushButton" name="b_brazo">
+           <property name="text">
+            <string>Brazo</string>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="0">
+          <widget class="QPushButton" name="b_mano">
+           <property name="text">
+            <string>Mano</string>
+           </property>
+          </widget>
+         </item>
+         <item row="6" column="0">
+          <widget class="QPushButton" name="b_pantorrilla">
+           <property name="text">
+            <string>Pantorrilla</string>
+           </property>
+          </widget>
+         </item>
+         <item row="7" column="0">
+          <widget class="QPushButton" name="b_pie">
+           <property name="text">
+            <string>Pie</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QRadioButton" name="radioButton">
+           <property name="text">
+            <string>RadioButton</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+       <widget class="QWidget" name="dimensiones">
+        <attribute name="title">
+         <string>Dimesiones</string>
+        </attribute>
+        <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
-          <widget class="QComboBox" name="cbTablaDimensiones">
+          <layout class="QHBoxLayout" name="horizontalLayout_3">
            <item>
-            <property name="text">
-             <string>Hombre</string>
-            </property>
+            <widget class="QLabel" name="label_6">
+             <property name="text">
+              <string>Sexo:</string>
+             </property>
+            </widget>
            </item>
            <item>
+            <spacer name="horizontalSpacer_5">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item>
+            <widget class="QComboBox" name="cbTablaDimensiones">
+             <item>
+              <property name="text">
+               <string>Hombre</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Mujer</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <widget class="QTableWidget" name="tablaDimensiones">
+           <property name="enabled">
+            <bool>true</bool>
+           </property>
+           <property name="frameShadow">
+            <enum>QFrame::Sunken</enum>
+           </property>
+           <property name="editTriggers">
+            <set>QAbstractItemView::NoEditTriggers</set>
+           </property>
+           <property name="showDropIndicator" stdset="0">
+            <bool>false</bool>
+           </property>
+           <property name="dragDropOverwriteMode">
+            <bool>false</bool>
+           </property>
+           <property name="showGrid">
+            <bool>true</bool>
+           </property>
+           <property name="gridStyle">
+            <enum>Qt::DotLine</enum>
+           </property>
+           <row>
             <property name="text">
-             <string>Mujer</string>
+             <string>Cabeza</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>Tronco</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>Brazo</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>Antebrazo</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>Mano</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>Muslo</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>Pantorrilla</string>
+            </property>
+           </row>
+           <row>
+            <property name="text">
+             <string>Pie</string>
+            </property>
+           </row>
+           <column>
+            <property name="text">
+             <string>COM</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Masa</string>
+            </property>
+           </column>
+           <item row="0" column="0">
+            <property name="text">
+             <string/>
             </property>
            </item>
           </widget>
          </item>
         </layout>
+       </widget>
+      </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_5">
+       <item>
+        <spacer name="horizontalSpacer_6">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
        </item>
        <item>
-        <widget class="QTableWidget" name="tablaDimensiones">
-         <property name="enabled">
-          <bool>true</bool>
+        <widget class="QPushButton" name="b_torques">
+         <property name="text">
+          <string>Calcular Torques</string>
          </property>
-         <property name="frameShadow">
-          <enum>QFrame::Sunken</enum>
-         </property>
-         <property name="editTriggers">
-          <set>QAbstractItemView::NoEditTriggers</set>
-         </property>
-         <property name="showDropIndicator" stdset="0">
-          <bool>false</bool>
-         </property>
-         <property name="dragDropOverwriteMode">
-          <bool>false</bool>
-         </property>
-         <property name="showGrid">
-          <bool>true</bool>
-         </property>
-         <property name="gridStyle">
-          <enum>Qt::DotLine</enum>
-         </property>
-         <row>
-          <property name="text">
-           <string>Cabeza</string>
-          </property>
-         </row>
-         <row>
-          <property name="text">
-           <string>Tronco</string>
-          </property>
-         </row>
-         <row>
-          <property name="text">
-           <string>Brazo</string>
-          </property>
-         </row>
-         <row>
-          <property name="text">
-           <string>Antebrazo</string>
-          </property>
-         </row>
-         <row>
-          <property name="text">
-           <string>Mano</string>
-          </property>
-         </row>
-         <row>
-          <property name="text">
-           <string>Muslo</string>
-          </property>
-         </row>
-         <row>
-          <property name="text">
-           <string>Pantorrilla</string>
-          </property>
-         </row>
-         <row>
-          <property name="text">
-           <string>Pie</string>
-          </property>
-         </row>
-         <column>
-          <property name="text">
-           <string>COM</string>
-          </property>
-         </column>
-         <column>
-          <property name="text">
-           <string>Masa</string>
-          </property>
-         </column>
-         <item row="0" column="0">
-          <property name="text">
-           <string/>
-          </property>
-         </item>
         </widget>
        </item>
       </layout>
-     </widget>
-    </widget>
+     </item>
+    </layout>
     <zorder>cb_posiciones</zorder>
     <zorder>label_5</zorder>
     <zorder>b_anadirPos</zorder>
@@ -463,6 +475,8 @@
     <zorder>b_brazo</zorder>
     <zorder>b_antebrazo</zorder>
     <zorder>tabWidget</zorder>
+    <zorder>horizontalSpacer_6</zorder>
+    <zorder>b_torques</zorder>
    </widget>
   </widget>
   <action name="actionSalir">
